@@ -6,4 +6,22 @@ RUN mkdir /work/log
 WORKDIR /work/app
 COPY ./sakura-web/sakura-web-exe/target1/app.jar ./app.jar
 
-ENTRYPOINT java -jar /work/app/app.jar
+ENV JAVA_OPTS="\
+-Xms512m \
+-Xmx512g \
+-Xmn256m \
+-Xss256k \
+-XX:PermSize=256m \
+-XX:MaxPermSize=256m \
+-XX:+PrintGC \
+-XX:PrintGCDetails \
+-XX:PrintGCDateStamps \
+-XX:UserConcMarkSweepGC \
+-XX:UseParNewGC \
+-XX:CMSInitiatingOccupancyFraction=70 \
+-XX:+UseCMSInitiatingOccupancyOnly \
+-XX:+UseCMSCompactAtFullCollection \
+-XX:+DisableExplicitGC \
+-Xnoclassgc
+"
+ENTRYPOINT java ${JAVA_OPTS} -jar /work/app/app.jar
